introduce devops notes
devup notes

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -48,6 +48,9 @@ refactor: true
             {% if tag == "notes" %}
                 {% assign found_notes = true %}
                 {% break %}
+            {% elsif tag == "devops" %}
+                {% assign found_notes = true %}
+                {% break %}
             {% endif %}
         {% endfor %}
         {% if found_notes %}
