--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -47,6 +47,12 @@ refactor: true
             {% if tag == "notes" %}
                 {% assign found_notes = true %}
                 {% break %}
+            {% elsif tag == "devops" %}
+                {% assign found_notes = true %}
+                {% break %}
+            {% elsif tag == "ideas" %}
+                {% assign found_notes = true %}
+                {% break %}
             {% endif %}
         {% endfor %}
         {% if found_notes %}
